implemented tex to sympy so you can just copy answers into testing system

--- a/optimal_lab111.ipynb
+++ b/optimal_lab111.ipynb
@@ -8,7 +8,30 @@
    "source": [
     "import numpy as np\n",
     "import sympy as sp\n",
-    "sp.init_printing() "
+    "from sympy import latex\n",
+    "import re\n",
+    "sp.init_printing() \n",
+    "\n",
+    "def latex_to_sympy_matrix(latex_str):\n",
+    "    pattern = r'\\\\begin\\{pmatrix\\}(.*?)\\\\end\\{pmatrix\\}'\n",
+    "    match = re.search(pattern, latex_str, re.DOTALL)\n",
+    "    if not match:\n",
+    "        raise ValueError(\"Не удалось найти матрицу в формате pmatrix.\")\n",
+    "    \n",
+    "    matrix_content = match.group(1)\n",
+    "    \n",
+    "    rows = re.split(r'\\\\\\\\', matrix_content)\n",
+    "    \n",
+    "    matrix = []\n",
+    "    for row in rows:\n",
+    "        row = row.strip().replace('\\n', '')\n",
+    "        if not row:\n",
+    "            continue  \n",
+    "        elements = row.split('&')\n",
+    "        numeric_elements = [sp.sympify(elem.strip()) for elem in elements]\n",
+    "        matrix.append(numeric_elements)\n",
+    "    \n",
+    "    return sp.Matrix(matrix)"
    ]
   },
   {
@@ -24,21 +47,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = sp.Matrix(np.array([\n",
-    "    [ 1,  2, -1],\n",
-    "    [-3,  0, -2],\n",
-    "    [ 2,  3,  0],\n",
-    "]))\n",
-    "B = sp.Matrix(np.array([\n",
-    "    [-1],\n",
-    "    [-1],\n",
-    "    [ 1]\n",
-    "]))\n",
-    "lambd = sp.Matrix(np.array([\n",
-    "    [-2],\n",
-    "    [-1],\n",
-    "    [-3],\n",
-    "]))"
+    "latex_A = r\"\"\"\n",
+    "    \n",
+    "    \\begin{pmatrix}\n",
+    "    2 & 3 & -4\\\\0 & 1 & 2\\\\-3 & 2 & 4\\\\\n",
+    "    \\end{pmatrix}\n",
+    "  \n",
+    "\"\"\"\n",
+    "\n",
+    "latex_B = r\"\"\"\n",
+    "    \n",
+    "    \\begin{pmatrix}\n",
+    "    -1\\\\1\\\\4\\\\\n",
+    "    \\end{pmatrix}\n",
+    "  \n",
+    "\"\"\"\n",
+    "\n",
+    "latex_lambd =r\"\"\"\n",
+    "    \n",
+    "    \\begin{pmatrix}\n",
+    "    -2\\\\-1\\\\-3\\\\\n",
+    "    \\end{pmatrix}\n",
+    "  \n",
+    "\"\"\"\n",
+    "\n",
+    "A = latex_to_sympy_matrix(latex_A)\n",
+    "B = latex_to_sympy_matrix(latex_B)\n",
+    "lambd = latex_to_sympy_matrix(latex_lambd)\n"
    ]
   },
   {
@@ -50,20 +85,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Матрица управляемости:\n"
+      "Матрица управляемости:\n",
+      "\\begin{pmatrix}-1 & -15 & -87\\\\1 & 9 & 51\\\\4 & 21 & 147\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}-1 & -4 & 3\\\\-1 & 1 & 22\\\\1 & -5 & -5\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}-1 & -15 & -87\\\\1 & 9 & 51\\\\4 & 21 & 147\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡-1  -4  3 ⎤\n",
-       "⎢          ⎥\n",
-       "⎢-1  1   22⎥\n",
-       "⎢          ⎥\n",
-       "⎣1   -5  -5⎦"
+       "⎡-1  -15  -87⎤\n",
+       "⎢            ⎥\n",
+       "⎢1    9   51 ⎥\n",
+       "⎢            ⎥\n",
+       "⎣4   21   147⎦"
       ]
      },
      "execution_count": 3,
@@ -74,6 +110,11 @@
    "source": [
     "S = B.row_join(A @ B).row_join(A @ A @ B)\n",
     "print(\"Матрица управляемости:\")\n",
+    "ans = latex(S)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
     "S"
    ]
   },
@@ -86,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Определитель матрицы управляемости det(S) =  -161\n",
+      "Определитель матрицы управляемости det(S) =  198\n",
       "Система управляема\n"
      ]
     }
@@ -106,20 +147,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Коэффициенты характеристического полинома разомкнутой системы:\n"
+      "Коэффициенты характеристического полинома разомкнутой системы:\n",
+      "\\begin{pmatrix}30\\\\-2\\\\-7\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}-7\\\\14\\\\-1\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}30\\\\-2\\\\-7\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡-7⎤\n",
+       "⎡30⎤\n",
        "⎢  ⎥\n",
-       "⎢14⎥\n",
+       "⎢-2⎥\n",
        "⎢  ⎥\n",
-       "⎣-1⎦"
+       "⎣-7⎦"
       ]
      },
      "execution_count": 5,
@@ -131,6 +173,11 @@
     "c = A.charpoly().all_coeffs()\n",
     "c = sp.Matrix(np.flip(c[1:]).reshape((-1, 1)))\n",
     "print(\"Коэффициенты характеристического полинома разомкнутой системы:\")\n",
+    "ans = latex(c)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
     "c"
    ]
   },
@@ -143,7 +190,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Коэффициенты характеристического полинома замкнутой системы:\n"
+      "Коэффициенты характеристического полинома замкнутой системы:\n",
+      "\\begin{pmatrix}6\\\\11\\\\6\\end{pmatrix}\n"
      ]
     },
     {
@@ -177,6 +225,11 @@
     "cx = sp.Matrix(cx.reshape((-1, 1)))\n",
     "\n",
     "print(\"Коэффициенты характеристического полинома замкнутой системы:\")\n",
+    "ans = latex(cx)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
     "cx"
    ]
   },
@@ -189,22 +242,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Матрица D^-1:\n"
+      "Матрица D^-1:\n",
+      "\\begin{pmatrix}- \\frac{5}{66} & - \\frac{13}{66} & \\frac{1}{33}\\\\- \\frac{8}{33} & - \\frac{4}{11} & \\frac{1}{33}\\\\- \\frac{19}{33} & - \\frac{34}{33} & \\frac{4}{11}\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}- \\frac{4}{161} & \\frac{9}{161} & \\frac{5}{161}\\\\- \\frac{3}{23} & \\frac{1}{23} & - \\frac{2}{23}\\\\- \\frac{10}{23} & - \\frac{12}{23} & \\frac{1}{23}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}- \\frac{5}{66} & - \\frac{13}{66} & \\frac{1}{33}\\\\- \\frac{8}{33} & - \\frac{4}{11} & \\frac{1}{33}\\\\- \\frac{19}{33} & - \\frac{34}{33} & \\frac{4}{11}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡-4/161  9/161  5/161⎤\n",
-       "⎢                    ⎥\n",
-       "⎢-3/23   1/23   -2/23⎥\n",
-       "⎢                    ⎥\n",
-       "⎢ -10    -12         ⎥\n",
-       "⎢ ────   ────   1/23 ⎥\n",
-       "⎣  23     23         ⎦"
+       "⎡       -13        ⎤\n",
+       "⎢-5/66  ────   1/33⎥\n",
+       "⎢        66        ⎥\n",
+       "⎢                  ⎥\n",
+       "⎢-8/33  -4/11  1/33⎥\n",
+       "⎢                  ⎥\n",
+       "⎢-19    -34        ⎥\n",
+       "⎢────   ────   4/11⎥\n",
+       "⎣ 33     33        ⎦"
       ]
      },
      "execution_count": 7,
@@ -220,7 +276,12 @@
     "D = sp.Matrix(D)\n",
     "D_1 = D.inv()\n",
     "print(\"Матрица D^-1:\")\n",
-    "D_1"
+    "ans = latex(D_1)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
+    "D_1\n"
    ]
   },
   {
@@ -232,16 +293,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Вектор G^T\n"
+      "Вектор G^T\n",
+      "\\begin{pmatrix}24 & -13 & -13\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}-13 & 3 & -7\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}24 & -13 & -13\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "[-13  3  -7]"
+       "[24  -13  -13]"
       ]
      },
      "execution_count": 8,
@@ -252,7 +314,12 @@
    "source": [
     "g_T = (c - cx).T\n",
     "print(\"Вектор G^T\")\n",
-    "g_T"
+    "ans = latex(g_T)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
+    "g_T\n"
    ]
   },
   {
@@ -264,18 +331,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Вектор P:\n"
+      "Вектор P:\n",
+      "\\begin{pmatrix}\\frac{97}{11} & \\frac{442}{33} & - \\frac{145}{33}\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\frac{479}{161} & \\frac{492}{161} & - \\frac{156}{161}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{97}{11} & \\frac{442}{33} & - \\frac{145}{33}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡479  492  -156 ⎤\n",
-       "⎢───  ───  ─────⎥\n",
-       "⎣161  161   161 ⎦"
+       "⎡97  442  -145 ⎤\n",
+       "⎢──  ───  ─────⎥\n",
+       "⎣11   33    33 ⎦"
       ]
      },
      "execution_count": 9,
@@ -286,7 +354,12 @@
    "source": [
     "p = g_T @ D_1\n",
     "print(\"Вектор P:\")\n",
-    "p"
+    "ans = latex(p)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
+    "p\n"
    ]
   }
  ],
