--- a/optimal_lab112.ipynb
+++ b/optimal_lab112.ipynb
@@ -8,7 +8,30 @@
    "source": [
     "import numpy as np\n",
     "import sympy as sp\n",
-    "sp.init_printing() "
+    "from sympy import latex\n",
+    "import re\n",
+    "sp.init_printing() \n",
+    "\n",
+    "def latex_to_sympy_matrix(latex_str):\n",
+    "    pattern = r'\\\\begin\\{pmatrix\\}(.*?)\\\\end\\{pmatrix\\}'\n",
+    "    match = re.search(pattern, latex_str, re.DOTALL)\n",
+    "    if not match:\n",
+    "        raise ValueError(\"Не удалось найти матрицу в формате pmatrix.\")\n",
+    "    \n",
+    "    matrix_content = match.group(1)\n",
+    "    \n",
+    "    rows = re.split(r'\\\\\\\\', matrix_content)\n",
+    "    \n",
+    "    matrix = []\n",
+    "    for row in rows:\n",
+    "        row = row.strip().replace('\\n', '')\n",
+    "        if not row:\n",
+    "            continue  \n",
+    "        elements = row.split('&')\n",
+    "        numeric_elements = [sp.sympify(elem.strip()) for elem in elements]\n",
+    "        matrix.append(numeric_elements)\n",
+    "    \n",
+    "    return sp.Matrix(matrix)"
    ]
   },
   {
@@ -24,25 +47,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = sp.Matrix(np.array([\n",
-    "    [ 1,  5,  7],\n",
-    "    [ 0,  3,  5],\n",
-    "    [ 0,  2,  1],\n",
-    "]))\n",
-    "B = sp.Matrix(np.array([\n",
-    "    [ 2, -3],\n",
-    "    [ 1,  2],\n",
-    "    [ 1,  1]\n",
-    "]))\n",
-    "lambd = sp.Matrix(np.array([\n",
-    "    [-3],\n",
-    "    [-1],\n",
-    "    [-3],\n",
-    "]))\n",
-    "r = sp.Matrix([\n",
-    "    [ 2],\n",
-    "    [ 3],\n",
-    "])"
+    "latex_A = r\"\"\"\n",
+    "    \n",
+    "    \n",
+    "    \\begin{pmatrix}\n",
+    "    -3 & 1 & -1\\\\-1 & 0 & 0\\\\2 & -2 & 4\\\\\n",
+    "    \\end{pmatrix}\n",
+    "  \n",
+    "  \n",
+    "\"\"\"\n",
+    "\n",
+    "latex_B = r\"\"\"\n",
+    "    \n",
+    "    \n",
+    "    \\begin{pmatrix}\n",
+    "    -1 & -1\\\\-2 & 3\\\\4 & 0\\\\\n",
+    "    \\end{pmatrix}\n",
+    "  \n",
+    "  \n",
+    "\"\"\"\n",
+    "\n",
+    "latex_lambd =r\"\"\"\n",
+    "    \n",
+    "    \n",
+    "    \\begin{pmatrix}\n",
+    "    -1\\\\-4\\\\-3\\\\\n",
+    "    \\end{pmatrix}\n",
+    "  \n",
+    "  \n",
+    "\"\"\"\n",
+    "\n",
+    "latex_r = r\"\"\"\n",
+    "    \n",
+    "   \n",
+    "    \\begin{pmatrix}\n",
+    "    3\\\\2\\\\\n",
+    "    \\end{pmatrix}\n",
+    "  \n",
+    "  \n",
+    "\"\"\"\n",
+    "\n",
+    "A = latex_to_sympy_matrix(latex_A)\n",
+    "B = latex_to_sympy_matrix(latex_B)\n",
+    "lambd = latex_to_sympy_matrix(latex_lambd)\n",
+    "r = latex_to_sympy_matrix(latex_r)\n"
    ]
   },
   {
@@ -54,20 +102,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Матрица управляемости:\n"
+      "Матрица управляемости:\n",
+      "\\begin{pmatrix}-1 & -1 & -3 & 6 & -8 & -9\\\\-2 & 3 & 1 & 1 & 3 & -6\\\\4 & 0 & 18 & -8 & 64 & -22\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}2 & -3 & 14 & 14 & 75 & 104\\\\1 & 2 & 8 & 11 & 39 & 58\\\\1 & 1 & 3 & 5 & 19 & 27\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}-1 & -1 & -3 & 6 & -8 & -9\\\\-2 & 3 & 1 & 1 & 3 & -6\\\\4 & 0 & 18 & -8 & 64 & -22\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡2  -3  14  14  75  104⎤\n",
-       "⎢                      ⎥\n",
-       "⎢1  2   8   11  39  58 ⎥\n",
-       "⎢                      ⎥\n",
-       "⎣1  1   3   5   19  27 ⎦"
+       "⎡-1  -1  -3  6   -8  -9 ⎤\n",
+       "⎢                       ⎥\n",
+       "⎢-2  3   1   1   3   -6 ⎥\n",
+       "⎢                       ⎥\n",
+       "⎣4   0   18  -8  64  -22⎦"
       ]
      },
      "execution_count": 3,
@@ -78,6 +127,11 @@
    "source": [
     "S = B.row_join(A @ B).row_join(A @ A @ B)\n",
     "print(\"Матрица управляемости:\")\n",
+    "ans = latex(S)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
     "S"
    ]
   },
@@ -97,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Определитель матрицы управляемости det(S) =  -33\n",
+      "Определитель матрицы управляемости det(S) =  -58\n",
       "Система управляема\n"
      ]
     }
@@ -183,20 +237,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Коэффициенты характеристического полинома разомкнутой системы:\n"
+      "Коэффициенты характеристического полинома разомкнутой системы:\n",
+      "\\begin{pmatrix}-2\\\\-9\\\\-1\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}7\\\\-3\\\\-5\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}-2\\\\-9\\\\-1\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡7 ⎤\n",
+       "⎡-2⎤\n",
        "⎢  ⎥\n",
-       "⎢-3⎥\n",
+       "⎢-9⎥\n",
        "⎢  ⎥\n",
-       "⎣-5⎦"
+       "⎣-1⎦"
       ]
      },
      "execution_count": 6,
@@ -208,6 +263,11 @@
     "c = A.charpoly().all_coeffs()\n",
     "c = sp.Matrix(np.flip(c[1:]).reshape((-1, 1)))\n",
     "print(\"Коэффициенты характеристического полинома разомкнутой системы:\")\n",
+    "ans = latex(c)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
     "c"
    ]
   },
@@ -220,20 +280,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Коэффициенты характеристического полинома замкнутой системы:\n"
+      "Коэффициенты характеристического полинома замкнутой системы:\n",
+      "\\begin{pmatrix}12\\\\19\\\\8\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}9\\\\15\\\\7\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}12\\\\19\\\\8\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡9 ⎤\n",
+       "⎡12⎤\n",
        "⎢  ⎥\n",
-       "⎢15⎥\n",
+       "⎢19⎥\n",
        "⎢  ⎥\n",
-       "⎣7 ⎦"
+       "⎣8 ⎦"
       ]
      },
      "execution_count": 7,
@@ -254,6 +315,11 @@
     "cx = sp.Matrix(cx.reshape((-1, 1)))\n",
     "\n",
     "print(\"Коэффициенты характеристического полинома замкнутой системы:\")\n",
+    "ans = latex(cx)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
     "cx"
    ]
   },
@@ -266,26 +332,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Матрица D^-1:\n"
+      "Матрица D^-1:\n",
+      "\\begin{pmatrix}\\frac{30}{929} & - \\frac{113}{929} & \\frac{25}{1858}\\\\\\frac{48}{929} & \\frac{5}{929} & \\frac{20}{929}\\\\- \\frac{109}{929} & \\frac{8}{929} & \\frac{32}{929}\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\frac{1}{217} & - \\frac{65}{2387} & \\frac{115}{2387}\\\\\\frac{1}{217} & \\frac{90}{2387} & - \\frac{19}{341}\\\\\\frac{1}{217} & \\frac{59}{2387} & \\frac{394}{2387}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{30}{929} & - \\frac{113}{929} & \\frac{25}{1858}\\\\\\frac{48}{929} & \\frac{5}{929} & \\frac{20}{929}\\\\- \\frac{109}{929} & \\frac{8}{929} & \\frac{32}{929}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡       -65   115 ⎤\n",
-       "⎢1/217  ────  ────⎥\n",
-       "⎢       2387  2387⎥\n",
-       "⎢                 ⎥\n",
-       "⎢        90   -19 ⎥\n",
-       "⎢1/217  ────  ────⎥\n",
-       "⎢       2387  341 ⎥\n",
-       "⎢                 ⎥\n",
-       "⎢        59   394 ⎥\n",
-       "⎢1/217  ────  ────⎥\n",
-       "⎣       2387  2387⎦"
+       "⎡  30   -113    25 ⎤\n",
+       "⎢ ───   ─────  ────⎥\n",
+       "⎢ 929    929   1858⎥\n",
+       "⎢                  ⎥\n",
+       "⎢  48           20 ⎥\n",
+       "⎢ ───   5/929  ─── ⎥\n",
+       "⎢ 929          929 ⎥\n",
+       "⎢                  ⎥\n",
+       "⎢-109           32 ⎥\n",
+       "⎢─────  8/929  ─── ⎥\n",
+       "⎣ 929          929 ⎦"
       ]
      },
      "execution_count": 8,
@@ -303,6 +370,11 @@
     "D = sp.Matrix(D)\n",
     "D_1 = D.inv()\n",
     "print(\"Матрица D^-1:\")\n",
+    "ans = latex(D_1)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
     "D_1"
    ]
   },
@@ -315,18 +387,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Скалярное управление:\n"
+      "Скалярное управление:\n",
+      "\\begin{pmatrix}- \\frac{783}{929} & \\frac{1370}{929} & - \\frac{1023}{929}\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}- \\frac{32}{217} & - \\frac{314}{341} & - \\frac{2564}{2387}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}- \\frac{783}{929} & \\frac{1370}{929} & - \\frac{1023}{929}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡-32   -314   -2564 ⎤\n",
-       "⎢────  ─────  ──────⎥\n",
-       "⎣217    341    2387 ⎦"
+       "⎡-783   1370  -1023 ⎤\n",
+       "⎢─────  ────  ──────⎥\n",
+       "⎣ 929   929    929  ⎦"
       ]
      },
      "execution_count": 9,
@@ -337,6 +410,11 @@
    "source": [
     "v = (c - cx).T @ D_1 \n",
     "print(\"Скалярное управление:\")\n",
+    "ans = latex(v)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
     "v"
    ]
   },
@@ -349,22 +427,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Векторное управление:\n"
+      "Векторное управление:\n",
+      "\\begin{pmatrix}- \\frac{2349}{929} & \\frac{4110}{929} & - \\frac{3069}{929}\\\\- \\frac{1566}{929} & \\frac{2740}{929} & - \\frac{2046}{929}\\end{pmatrix}\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}- \\frac{64}{217} & - \\frac{628}{341} & - \\frac{5128}{2387}\\\\- \\frac{96}{217} & - \\frac{942}{341} & - \\frac{7692}{2387}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}- \\frac{2349}{929} & \\frac{4110}{929} & - \\frac{3069}{929}\\\\- \\frac{1566}{929} & \\frac{2740}{929} & - \\frac{2046}{929}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡-64   -628   -5128 ⎤\n",
-       "⎢────  ─────  ──────⎥\n",
-       "⎢217    341    2387 ⎥\n",
-       "⎢                   ⎥\n",
-       "⎢-96   -942   -7692 ⎥\n",
-       "⎢────  ─────  ──────⎥\n",
-       "⎣217    341    2387 ⎦"
+       "⎡-2349   4110  -3069 ⎤\n",
+       "⎢──────  ────  ──────⎥\n",
+       "⎢ 929    929    929  ⎥\n",
+       "⎢                    ⎥\n",
+       "⎢-1566   2740  -2046 ⎥\n",
+       "⎢──────  ────  ──────⎥\n",
+       "⎣ 929    929    929  ⎦"
       ]
      },
      "execution_count": 10,
@@ -375,6 +454,11 @@
    "source": [
     "u = r @ v\n",
     "print(\"Векторное управление:\")\n",
+    "ans = latex(u)\n",
+    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
+    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
+    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "print(ans)\n",
     "u"
    ]
   }
