added fixed_latex function to make code easier to read

--- a/optimal_lab111.ipynb
+++ b/optimal_lab111.ipynb
@@ -31,7 +31,12 @@
     "        numeric_elements = [sp.sympify(elem.strip()) for elem in elements]\n",
     "        matrix.append(numeric_elements)\n",
     "    \n",
-    "    return sp.Matrix(matrix)"
+    "    return sp.Matrix(matrix)\n",
+    "\n",
+    "def fixed_latex(ans):\n",
+    "    return latex(ans).replace(\"matrix\", \"pmatrix\")\\\n",
+    "                     .replace('\\\\' + \"right]\", \"\")\\\n",
+    "                     .replace('\\\\' + \"left[\", \"\")"
    ]
   },
   {
@@ -110,10 +115,7 @@
    "source": [
     "S = B.row_join(A @ B).row_join(A @ A @ B)\n",
     "print(\"Матрица управляемости:\")\n",
-    "ans = latex(S)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(S)\n",
     "print(ans)\n",
     "S"
    ]
@@ -173,10 +175,7 @@
     "c = A.charpoly().all_coeffs()\n",
     "c = sp.Matrix(np.flip(c[1:]).reshape((-1, 1)))\n",
     "print(\"Коэффициенты характеристического полинома разомкнутой системы:\")\n",
-    "ans = latex(c)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(c)\n",
     "print(ans)\n",
     "c"
    ]
@@ -225,10 +224,7 @@
     "cx = sp.Matrix(cx.reshape((-1, 1)))\n",
     "\n",
     "print(\"Коэффициенты характеристического полинома замкнутой системы:\")\n",
-    "ans = latex(cx)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(cx)\n",
     "print(ans)\n",
     "cx"
    ]
@@ -276,10 +272,7 @@
     "D = sp.Matrix(D)\n",
     "D_1 = D.inv()\n",
     "print(\"Матрица D^-1:\")\n",
-    "ans = latex(D_1)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(D_1)\n",
     "print(ans)\n",
     "D_1\n"
    ]
@@ -314,10 +307,7 @@
    "source": [
     "g_T = (c - cx).T\n",
     "print(\"Вектор G^T\")\n",
-    "ans = latex(g_T)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(g_T)\n",
     "print(ans)\n",
     "g_T\n"
    ]
@@ -354,10 +344,7 @@
    "source": [
     "p = g_T @ D_1\n",
     "print(\"Вектор P:\")\n",
-    "ans = latex(p)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(p)\n",
     "print(ans)\n",
     "p\n"
    ]
