--- a/optimal_lab112.ipynb
+++ b/optimal_lab112.ipynb
@@ -31,7 +31,12 @@
     "        numeric_elements = [sp.sympify(elem.strip()) for elem in elements]\n",
     "        matrix.append(numeric_elements)\n",
     "    \n",
-    "    return sp.Matrix(matrix)"
+    "    return sp.Matrix(matrix)\n",
+    "\n",
+    "def fixed_latex(ans):\n",
+    "    return latex(ans).replace(\"matrix\", \"pmatrix\")\\\n",
+    "                     .replace('\\\\' + \"right]\", \"\")\\\n",
+    "                     .replace('\\\\' + \"left[\", \"\")"
    ]
   },
   {
@@ -127,10 +132,7 @@
    "source": [
     "S = B.row_join(A @ B).row_join(A @ A @ B)\n",
     "print(\"Матрица управляемости:\")\n",
-    "ans = latex(S)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(S)\n",
     "print(ans)\n",
     "S"
    ]
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +256,7 @@
        "⎣-1⎦"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,17 +265,14 @@
     "c = A.charpoly().all_coeffs()\n",
     "c = sp.Matrix(np.flip(c[1:]).reshape((-1, 1)))\n",
     "print(\"Коэффициенты характеристического полинома разомкнутой системы:\")\n",
-    "ans = latex(c)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(c)\n",
     "print(ans)\n",
     "c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +296,7 @@
        "⎣8 ⎦"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,17 +314,14 @@
     "cx = sp.Matrix(cx.reshape((-1, 1)))\n",
     "\n",
     "print(\"Коэффициенты характеристического полинома замкнутой системы:\")\n",
-    "ans = latex(cx)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(cx)\n",
     "print(ans)\n",
     "cx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +351,7 @@
        "⎣ 929          929 ⎦"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,17 +366,14 @@
     "D = sp.Matrix(D)\n",
     "D_1 = D.inv()\n",
     "print(\"Матрица D^-1:\")\n",
-    "ans = latex(D_1)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(D_1)\n",
     "print(ans)\n",
     "D_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +395,7 @@
        "⎣ 929   929    929  ⎦"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,17 +403,14 @@
    "source": [
     "v = (c - cx).T @ D_1 \n",
     "print(\"Скалярное управление:\")\n",
-    "ans = latex(v)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(v)\n",
     "print(ans)\n",
     "v"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +436,7 @@
        "⎣ 929    929    929  ⎦"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,10 +444,7 @@
    "source": [
     "u = r @ v\n",
     "print(\"Векторное управление:\")\n",
-    "ans = latex(u)\n",
-    "ans = ans.replace(\"matrix\",\"pmatrix\")\n",
-    "ans = ans.replace('\\\\' + \"right]\", \"\")\n",
-    "ans = ans.replace('\\\\' + \"left[\", \"\")\n",
+    "ans = fixed_latex(u)\n",
     "print(ans)\n",
     "u"
    ]
