moved latex functions into latex.py so notebooks doesn't have to copy it every time

--- a/optimal_lab122.ipynb
+++ b/optimal_lab122.ipynb
@@ -2,41 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sympy as sp\n",
-    "from sympy import latex\n",
-    "import re\n",
-    "sp.init_printing() \n",
-    "\n",
-    "def latex_to_sympy_matrix(latex_str):\n",
-    "    pattern = r'\\\\begin\\{pmatrix\\}(.*?)\\\\end\\{pmatrix\\}'\n",
-    "    match = re.search(pattern, latex_str, re.DOTALL)\n",
-    "    if not match:\n",
-    "        raise ValueError(\"Не удалось найти матрицу в формате pmatrix.\")\n",
-    "    \n",
-    "    matrix_content = match.group(1)\n",
-    "    \n",
-    "    rows = re.split(r'\\\\\\\\', matrix_content)\n",
-    "    \n",
-    "    matrix = []\n",
-    "    for row in rows:\n",
-    "        row = row.strip().replace('\\n', '')\n",
-    "        if not row:\n",
-    "            continue  \n",
-    "        elements = row.split('&')\n",
-    "        numeric_elements = [sp.sympify(elem.strip()) for elem in elements]\n",
-    "        matrix.append(numeric_elements)\n",
-    "    \n",
-    "    return sp.Matrix(matrix)\n",
-    "\n",
-    "def fixed_latex(ans):\n",
-    "    return latex(ans).replace(\"matrix\", \"pmatrix\")\\\n",
-    "                     .replace('\\\\' + \"right]\", \"\")\\\n",
-    "                     .replace('\\\\' + \"left[\", \"\")"
+    "from latex import *\n",
+    "sp.init_printing() "
    ]
   },
   {
@@ -48,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +89,7 @@
        "⎣2 ⎦"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +128,7 @@
        "⎣2   22  31 ⎦"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +194,7 @@
        "⎣-9⎦"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +239,7 @@
        "⎣7 ⎦"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +289,7 @@
        "⎣209  209   209 ⎦"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
