--- a/optimal_lab121.ipynb
+++ b/optimal_lab121.ipynb
@@ -8,35 +8,8 @@
    "source": [
     "import numpy as np\n",
     "import sympy as sp\n",
-    "from sympy import latex\n",
-    "import re\n",
-    "sp.init_printing() \n",
-    "\n",
-    "def latex_to_sympy_matrix(latex_str):\n",
-    "    pattern = r'\\\\begin\\{pmatrix\\}(.*?)\\\\end\\{pmatrix\\}'\n",
-    "    match = re.search(pattern, latex_str, re.DOTALL)\n",
-    "    if not match:\n",
-    "        raise ValueError(\"Не удалось найти матрицу в формате pmatrix.\")\n",
-    "    \n",
-    "    matrix_content = match.group(1)\n",
-    "    \n",
-    "    rows = re.split(r'\\\\\\\\', matrix_content)\n",
-    "    \n",
-    "    matrix = []\n",
-    "    for row in rows:\n",
-    "        row = row.strip().replace('\\n', '')\n",
-    "        if not row:\n",
-    "            continue  \n",
-    "        elements = row.split('&')\n",
-    "        numeric_elements = [sp.sympify(elem.strip()) for elem in elements]\n",
-    "        matrix.append(numeric_elements)\n",
-    "    \n",
-    "    return sp.Matrix(matrix)\n",
-    "\n",
-    "def fixed_latex(ans):\n",
-    "    return latex(ans).replace(\"matrix\", \"pmatrix\")\\\n",
-    "                     .replace('\\\\' + \"right]\", \"\")\\\n",
-    "                     .replace('\\\\' + \"left[\", \"\")"
+    "from latex import *\n",
+    "sp.init_printing() "
    ]
   },
   {
